# stacks-wars-be

./: Cargo.toml  README.md  quick_test.sh  test_auth_rate_limit.sh  test_rate_limit.sh
src/: auth.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  old_models.rs  state.rs  ws.rs
src/db/: game.rs  game_room.rs  mod.rs  room.rs  tx.rs  user.rs
src/db/chat/: delete.rs  get.rs  post.rs
src/db/game/: _patch.rs  delete.rs  get.rs  mod.rs  player_words.rs  post.rs  state.rs  words.rs
src/db/leaderboard/: get.rs  patch.rs
src/db/lobby/: countdown.rs  get.rs  join_requests.rs  mod.rs  patch.rs  post.rs  put.rs
src/db/room/: get.rs  mod.rs  patch.rs  post.rs  put.rs
src/db/season/: get.rs  patch.rs
src/db/stacks_sweeper/: countdown.rs
src/db/user/: get.rs  mod.rs  patch.rs  post.rs  put.rs
src/games/: init.rs  lexi_wars.rs  mod.rs
src/games/lexi_wars/: engine.rs  mod.rs  rules.rs  utils.rs
src/games/stacks_sweeper/: engine.rs  rules.rs  utils.rs
src/games/stacks_sweepers/: engine.rs  handlers.rs  mod.rs  single.rs  timer.rs  utils.rs
src/http/: bot.rs  bot_commands.rs  handlers.rs  mod.rs  routes.rs
src/http/handlers/: game.rs  leaderboard.rs  lobby.rs  mod.rs  room.rs  season.rs  stacks_sweeper.rs  token_info.rs  user.rs
src/models/: chat.rs  game.rs  leaderboard.rs  lexi_wars.rs  lobby.rs  mod.rs  platform_rating.rs  redis.rs  season.rs  stacks_sweeper.rs  user.rs  word_loader.rs
src/ws/: game_loop.rs  handler.rs  handlers.rs  lobby.rs  mod.rs  routes.rs  rules.rs
src/ws/handlers/: lexi_wars.rs  mod.rs  stacks_sweepers.rs  stacks_sweepers_single.rs  utils.rs
src/ws/handlers/chat/: chat_handler.rs  message_handler.rs  mod.rs  utils.rs  voice.rs
src/ws/handlers/lobby/: handler.rs  mod.rs
src/ws/handlers/lobby/message_handler/: handler.rs  join_lobby.rs  kick_player.rs  last_ping.rs  leave_lobby.rs  leave_room.rs  mod.rs  permit_join.rs  ping.rs  request_join.rs  request_leave.rs  update_game_state.rs  update_player_state.rs
tests/: test.html  test_rules.rs
