[package]
name = "stacks_wars_be"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = {version = "0.8.4", features = ["ws", "macros"]}
axum-extra = {version = "0.10.1", features = ["typed-header"]}
axum-macros = "0.5.0"
bb8 = "0.9.0"
bb8-redis = "0.23.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
futures = "0.3.31"
headers = "0.4.1"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rand = "0.9.1"
redis = {version = "0.31.0", features = ["tokio-comp", "connection-manager"]}
reqwest = {version = "0.12.22", features = ["json"]}
serde = {version ="1.0.219", features = ["serde_derive"]}
serde_json = "1.0.140"
teloxide = "0.16.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version = "1.17.0", features = ["v4", "serde"]}
